test/fail/lambdas/lambda_return.lily
#[
SyntaxError: 'return' not allowed in a lambda.
    from lambda_return.lily:6:
]#

var v = (|| return )
